# MotionByte-Framework

./: CMakeLists.txt  README.md  setup_evironment.sh  test.sh  todo_component.todo
MotionByte-1.0/: CMakeLists.txt  DEBUG.h  MotionByteHeader.h
MotionByte-1.0/Base/FrameRenderer/: FrameRenderer.cpp  IFrameEventListener.h
MotionByte-1.0/Base/Graphic/: Align.cpp  Align.h  Color.cpp  Color.h  FontManager.cpp  FontManager.h  Frame.cpp  Frame.h  ProgramManager.cpp  ProgramManager.h  ShapeManager.cpp  ShapeManager.h  Vertex.h
MotionByte-1.0/Base/Property/: ColorManager.h  Interpolator.cpp  Interpolator.h  InterpolatorFactory.cpp  Property.cpp  Property.h  PropertyManager.h
MotionByte-1.0/Base/Property/Interpolator/: EaseInOut.h  Smooth.cpp  Smooth.h
MotionByte-1.0/Base/Segment/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h  Transformer.h  TransformerMachine.h  VisualObject.cpp  VisualObject.h
MotionByte-1.0/Base/Segment/Event/: MouseEvenHandler.h
MotionByte-1.0/Base/Window/: GlwfManager.cpp  GlwfManager.h  Window.cpp  Window.h
MotionByte-1.0/Base/animator/: FrameRenderer.cpp  FrameRenderer.h  IFrameEventListener.cpp
MotionByte-1.0/Base/animator/timer/: PausableTimer.h  Timer.h
MotionByte-1.0/Base/component/: Segment.cpp  Segment.h  Transformer.h  TransformerMachine.h  VisualObject.cpp
MotionByte-1.0/Base/component/abstract-component/: AbstractButton.cpp  AbstractButton.h  AbstractPushButton.cpp  AbstractPushButton.h  AbstractSlider.cpp  AbstractSlider.h  AbstractTextBox.cpp  AbstractTextBox.h  AbstractToggleButton.cpp  AbstractToggleButton.h
MotionByte-1.0/Base/component/base-component/: Segment.cpp  Segment.h  VisualObject.cpp  VisualObject.h
MotionByte-1.0/Base/component/base-component/event/: KeyboardEventManager.cpp  KeyboardEventManager.h  MouseEvenHandler.h  MouseEventHandler.h
MotionByte-1.0/Base/component/display-component/: ComponentHeader.h  Label.cpp  Label.h
MotionByte-1.0/Base/component/event/: MouseEvenHandler.h
MotionByte-1.0/Base/debugging_tool/: DEBUG.h
MotionByte-1.0/Base/graphic/drawer/: Frame.cpp  Frame.h
MotionByte-1.0/Base/graphic/program/: FontManager.cpp  FontManager.h  ProgramManager.h  ShapeManager.cpp  ShapeManager.h
MotionByte-1.0/Base/graphic/window/: GraphicManager.cpp  GraphicManager.h  Window.cpp  Window.h
MotionByte-1.0/Base/util/functional/: FpsCounter.cpp  FpsCounter.h  GraphicMath.cpp  GraphicMath.h
MotionByte-1.0/Base/util/geometry/: Align.cpp  Align.h  Color.cpp  Color.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Vertex.cpp
MotionByte-1.0/Base/util/property/: ColorManager.cpp  ColorManager.h  Interpolator.h  InterpolatorBase.h  InterpolatorFactory.cpp  InterpolatorFactory.h  InterpolatorModule.cpp  InterpolatorModule.h  Property.cpp  Property.h  PropertyManager.cpp  PropertyManager.h
MotionByte-1.0/Base/util/property/interpolators/: EaseInOut.cpp  EaseInOut.h  Linear.cpp  Linear.h  Smooth.cpp  Smooth.h  Step.cpp  Step.h
MotionByte-1.0/FloaterCollection/: Floater.h
MotionByte-1.0/FloaterCollection/button/: CheckBox.cpp  CheckBox.h
MotionByte-1.0/FloaterCollection/slider/: Slider.cpp  Slider.h
MotionByte-1.0/FloaterCollection/textBox/: TextBox.h
MotionByte-1.0/Functional/: GraphicMath.cpp  GraphicMath.h  PausableTimer.h  Timer.h
MotionByte-1.0/Resource/: Roboto-Regular.h
MotionByte-1.0/SDK/: CMakeLists.txt  GLEW_1130.lib
MotionByte-1.0/SDK/glfw-3.1.2/src/: CMakeLists.txt
MotionByte-test-kit/: TestFrameRenderer.cpp  TestShader.cpp  Test_show_text_using_lib.cpp  TextShowTest.cpp  antiAliasingTest.cpp  main.cpp
MotionByte-test-kit/InterpolatorPlotter/: SmoothPlotter.py  calculation_for_cubic_smooth.txt  solver.py
MotionByte-test-kit/linux/: build.sh  buildAndRun.sh
SDK/: CMakeLists.txt
pertyG-1.0-test-kit/: CMakeLists.txt  TestFrameRenderer.cpp  main.cpp
pertyG-1.0-test-kit/linux/: build.sh  buildAndRun.sh  main
pertyG-1.0-test-kit/windows/: CMakeLists.txt
pertyG-1.0/Base/: Equation.h  FrameRenderer.h  GlwfManager.h  IFrameEventListener.cpp  Property.h  PropertyManager.h  Region.h  Window.h
pertyG-1.0/Base/FrameRenderer/: FrameRenderer.cpp  FrameRenderer.h  IFrameEventListener.h
pertyG-1.0/Base/Graphic/: Color.cpp  Color.h  Frame.cpp  Frame.h
pertyG-1.0/Base/Property/: Interpolator.cpp  Interpolator.h  InterpolatorFactory.cpp  InterpolatorFactory.h  Property.cpp  Property.h  PropertyHeader.h  PropertyManager.cpp  PropertyManager.h
pertyG-1.0/Base/Property/Interpolator/: EaseInOut.cpp  EaseInOut.h  Linear.cpp  Linear.h  Smooth.cpp  Smooth.h  Step.cpp  Step.h
pertyG-1.0/Base/Segment/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h
pertyG-1.0/Base/Segment/Event/: MouseEvenHandler.h
pertyG-1.0/Base/Window/: GlwfManager.cpp  GlwfManager.h  Window.cpp  Window.h
pertyG-1.0/Functional/: Timer.h
tool/: calculator.py  file_lister.py  graphic_plotter.py
